chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10897,3 +10897,21 @@
   timeWait: 0 mins
   timeBuild: 5 mins
   timeTotal: 6 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-26
+  taskId: 60026335
+  timeCreate: Tue Mar 26 05:39:54 2024
+  timeStart: Tue Mar 26 05:40:53 2024
+  timeFinish: Tue Mar 26 10:03:22 2024
+  timeWait: 0 mins
+  timeBuild: 262 mins
+  timeTotal: 263 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-60
+  taskId: 60036595
+  timeCreate: Tue Mar 26 10:21:37 2024
+  timeStart: Tue Mar 26 10:22:09 2024
+  timeFinish: Tue Mar 26 10:26:29 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
