chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10915,3 +10915,12 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-61
+  taskId: 60038158
+  timeCreate: Tue Mar 26 11:07:47 2024
+  timeStart: Tue Mar 26 11:18:02 2024
+  timeFinish: Tue Mar 26 11:23:59 2024
+  timeWait: 10 mins
+  timeBuild: 5 mins
+  timeTotal: 16 mins
