chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10906,6 +10906,15 @@
   timeWait: 0 mins
   timeBuild: 262 mins
   timeTotal: 263 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-27
+  taskId: 60035833
+  timeCreate: Tue Mar 26 14:08:05 2024
+  timeStart: Tue Mar 26 14:08:20 2024
+  timeFinish: Tue Mar 26 18:32:22 2024
+  timeWait: 0 mins
+  timeBuild: 264 mins
+  timeTotal: 264 mins
 - name: devspaces-operator-bundle
   tag: 3.13-60
   taskId: 60036595
@@ -10924,3 +10933,12 @@
   timeWait: 10 mins
   timeBuild: 5 mins
   timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-62
+  taskId: 60047009
+  timeCreate: Tue Mar 26 18:53:55 2024
+  timeStart: Tue Mar 26 18:54:17 2024
+  timeFinish: Tue Mar 26 18:58:32 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
