chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10942,3 +10942,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-32
+  taskId: 60051332
+  timeCreate: Tue Mar 26 18:29:25 2024
+  timeStart: Tue Mar 26 18:30:11 2024
+  timeFinish: Tue Mar 26 18:38:26 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-63
+  taskId: 60051546
+  timeCreate: Tue Mar 26 19:05:09 2024
+  timeStart: Tue Mar 26 19:05:39 2024
+  timeFinish: Tue Mar 26 19:09:07 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
