update main devfile; bump schema version; set https endpoint
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -15,6 +15,7 @@ components:
       endpoints:
         - name: openvsx
           exposure: internal
+          protocol: https
           targetPort: 5432
 commands:
   - id: podman-login
