--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10987,3 +10987,21 @@
   timeWait: 0 mins
   timeBuild: 6 mins
   timeTotal: 6 mins
+- name: devspaces-server-rhel8
+  tag: 3.13-8
+  taskId: 60076736
+  timeCreate: Wed Mar 27 11:06:22 2024
+  timeStart: Wed Mar 27 11:06:55 2024
+  timeFinish: Wed Mar 27 11:16:15 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-65
+  taskId: 60079122
+  timeCreate: Wed Mar 27 11:46:21 2024
+  timeStart: Wed Mar 27 11:55:20 2024
+  timeFinish: Wed Mar 27 12:00:40 2024
+  timeWait: 8 mins
+  timeBuild: 5 mins
+  timeTotal: 14 mins
