chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10978,6 +10978,15 @@
   timeWait: 0 mins
   timeBuild: 25 mins
   timeTotal: 25 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-30
+  taskId: 60074243
+  timeCreate: Wed Mar 27 10:21:36 2024
+  timeStart: Wed Mar 27 10:21:39 2024
+  timeFinish: Wed Mar 27 14:55:24 2024
+  timeWait: 0 mins
+  timeBuild: 273 mins
+  timeTotal: 273 mins
 - name: devspaces-operator-bundle
   tag: 3.13-64
   taskId: 60074871
@@ -11005,3 +11014,12 @@
   timeWait: 8 mins
   timeBuild: 5 mins
   timeTotal: 14 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-66
+  taskId: 60087299
+  timeCreate: Wed Mar 27 15:12:25 2024
+  timeStart: Wed Mar 27 15:13:11 2024
+  timeFinish: Wed Mar 27 15:16:47 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
