--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11014,6 +11014,15 @@
   timeWait: 8 mins
   timeBuild: 5 mins
   timeTotal: 14 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-31
+  taskId: 60086730
+  timeCreate: Wed Mar 27 15:00:15 2024
+  timeStart: Wed Mar 27 15:00:47 2024
+  timeFinish: null
+  timeWait: 0 mins
+  timeBuild: -900 mins
+  timeTotal: -900 mins
 - name: devspaces-operator-bundle
   tag: 3.13-66
   taskId: 60087299
@@ -11022,4 +11031,22 @@
   timeFinish: Wed Mar 27 15:16:47 2024
   timeWait: 0 mins
   timeBuild: 3 mins
+  timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-33
+  taskId: 60096628
+  timeCreate: Wed Mar 27 18:38:31 2024
+  timeStart: Wed Mar 27 18:39:01 2024
+  timeFinish: Wed Mar 27 18:48:52 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-67
+  taskId: 60097076
+  timeCreate: Wed Mar 27 19:13:51 2024
+  timeStart: Wed Mar 27 19:14:34 2024
+  timeFinish: Wed Mar 27 19:18:48 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
   timeTotal: 4 mins
