--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11068,3 +11068,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-33
+  taskId: 60106343
+  timeCreate: Thu Mar 28 03:12:59 2024
+  timeStart: Thu Mar 28 03:13:39 2024
+  timeFinish: Thu Mar 28 07:37:03 2024
+  timeWait: 0 mins
+  timeBuild: 263 mins
+  timeTotal: 264 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-69
+  taskId: 60111875
+  timeCreate: Thu Mar 28 08:05:27 2024
+  timeStart: Thu Mar 28 08:05:57 2024
+  timeFinish: Thu Mar 28 08:09:35 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
