--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11086,3 +11086,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.13-11
+  taskId: 60114546
+  timeCreate: Thu Mar 28 06:28:54 2024
+  timeStart: Thu Mar 28 06:29:55 2024
+  timeFinish: Thu Mar 28 07:18:10 2024
+  timeWait: 1 mins
+  timeBuild: 48 mins
+  timeTotal: 49 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-34
+  taskId: 60114633
+  timeCreate: Thu Mar 28 06:38:53 2024
+  timeStart: Thu Mar 28 06:39:10 2024
+  timeFinish: Thu Mar 28 06:47:52 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-70
+  taskId: 60115328
+  timeCreate: Thu Mar 28 07:32:07 2024
+  timeStart: Thu Mar 28 07:32:41 2024
+  timeFinish: Thu Mar 28 07:36:19 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
