chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11086,6 +11086,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-34
+  taskId: 60113855
+  timeCreate: Thu Mar 28 05:44:49 2024
+  timeStart: Thu Mar 28 05:44:55 2024
+  timeFinish: Thu Mar 28 10:12:23 2024
+  timeWait: 0 mins
+  timeBuild: 267 mins
+  timeTotal: 267 mins
 - name: devspaces-pluginregistry-rhel8
   tag: 3.13-11
   taskId: 60114546
