chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11122,3 +11122,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-72
+  taskId: 60119266
+  timeCreate: Thu Mar 28 11:02:49 2024
+  timeStart: Thu Mar 28 11:08:51 2024
+  timeFinish: Thu Mar 28 11:14:49 2024
+  timeWait: 6 mins
+  timeBuild: 5 mins
+  timeTotal: 12 mins
