--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11131,3 +11131,21 @@
   timeWait: 6 mins
   timeBuild: 5 mins
   timeTotal: 12 mins
+- name: devspaces-operator
+  tag: 3.13-7
+  taskId: 60140384
+  timeCreate: Fri Mar 29 10:58:30 2024
+  timeStart: Fri Mar 29 10:59:09 2024
+  timeFinish: Fri Mar 29 11:15:52 2024
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 17 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-73
+  taskId: 60140434
+  timeCreate: Fri Mar 29 11:42:14 2024
+  timeStart: Fri Mar 29 11:42:55 2024
+  timeFinish: Fri Mar 29 11:46:45 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
