--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11131,6 +11131,15 @@
   timeWait: 6 mins
   timeBuild: 5 mins
   timeTotal: 12 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-35
+  taskId: 60140017
+  timeCreate: Fri Mar 29 05:28:42 2024
+  timeStart: Fri Mar 29 05:29:32 2024
+  timeFinish: Fri Mar 29 09:50:15 2024
+  timeWait: 0 mins
+  timeBuild: 260 mins
+  timeTotal: 261 mins
 - name: devspaces-operator
   tag: 3.13-7
   taskId: 60140384
@@ -11146,6 +11155,15 @@
   timeCreate: Fri Mar 29 11:42:14 2024
   timeStart: Fri Mar 29 11:42:55 2024
   timeFinish: Fri Mar 29 11:46:45 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-74
+  taskId: 60141048
+  timeCreate: Fri Mar 29 10:12:04 2024
+  timeStart: Fri Mar 29 10:12:41 2024
+  timeFinish: Fri Mar 29 10:16:33 2024
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
