Update main devfile; bump schema version; set https endpoint (#1060)
* update main devfile; bump schema version; set https endpoint

Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

* update schema version

Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

---------

Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -1,4 +1,4 @@
-schemaVersion: 2.2.0
+schemaVersion: 2.2.2
 metadata:
   name: ds-plugin-registry-dev
 components:
@@ -15,6 +15,7 @@ components:
       endpoints:
         - name: openvsx
           exposure: internal
+          protocol: https
           targetPort: 5432
 commands:
   - id: podman-login
