chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11158,6 +11158,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-36
+  taskId: 60140953
+  timeCreate: Fri Mar 29 09:51:08 2024
+  timeStart: Fri Mar 29 09:51:46 2024
+  timeFinish: Fri Mar 29 14:14:40 2024
+  timeWait: 0 mins
+  timeBuild: 262 mins
+  timeTotal: 263 mins
 - name: devspaces-operator-bundle
   tag: 3.13-74
   taskId: 60141048
@@ -11176,3 +11185,12 @@
   timeWait: 7 mins
   timeBuild: 4 mins
   timeTotal: 12 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-76
+  taskId: 60143487
+  timeCreate: Fri Mar 29 14:34:28 2024
+  timeStart: Fri Mar 29 14:34:51 2024
+  timeFinish: Fri Mar 29 14:39:05 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
