--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11185,6 +11185,15 @@
   timeWait: 7 mins
   timeBuild: 4 mins
   timeTotal: 12 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-37
+  taskId: 60143360
+  timeCreate: Fri Mar 29 14:18:54 2024
+  timeStart: Fri Mar 29 14:19:22 2024
+  timeFinish: Fri Mar 29 18:38:39 2024
+  timeWait: 0 mins
+  timeBuild: 259 mins
+  timeTotal: 259 mins
 - name: devspaces-operator-bundle
   tag: 3.13-76
   taskId: 60143487
@@ -11193,4 +11202,31 @@
   timeFinish: Fri Mar 29 14:39:05 2024
   timeWait: 0 mins
   timeBuild: 4 mins
+  timeTotal: 4 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.13-5
+  taskId: 60144573
+  timeCreate: Fri Mar 29 17:57:45 2024
+  timeStart: Fri Mar 29 17:58:19 2024
+  timeFinish: Fri Mar 29 18:24:03 2024
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 26 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-35
+  taskId: 60144734
+  timeCreate: Fri Mar 29 18:37:20 2024
+  timeStart: Fri Mar 29 18:38:02 2024
+  timeFinish: Fri Mar 29 18:46:26 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-77
+  taskId: 60144767
+  timeCreate: Fri Mar 29 18:50:42 2024
+  timeStart: Fri Mar 29 18:51:02 2024
+  timeFinish: Fri Mar 29 18:54:58 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
   timeTotal: 4 mins
