chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11203,6 +11203,15 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-38
+  taskId: 60144510
+  timeCreate: Fri Mar 29 17:33:12 2024
+  timeStart: Fri Mar 29 17:33:18 2024
+  timeFinish: Fri Mar 29 22:03:03 2024
+  timeWait: 0 mins
+  timeBuild: 269 mins
+  timeTotal: 269 mins
 - name: devspaces-traefik-rhel8
   tag: 3.13-5
   taskId: 60144573
@@ -11230,3 +11239,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-78
+  taskId: 60145508
+  timeCreate: Fri Mar 29 22:10:45 2024
+  timeStart: Fri Mar 29 22:11:09 2024
+  timeFinish: Fri Mar 29 22:14:36 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
