chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11248,3 +11248,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-39
+  taskId: 60145691
+  timeCreate: Fri Mar 29 22:35:06 2024
+  timeStart: Fri Mar 29 22:35:26 2024
+  timeFinish: Sat Mar 30 02:55:11 2024
+  timeWait: 0 mins
+  timeBuild: 259 mins
+  timeTotal: 260 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-79
+  taskId: 60147083
+  timeCreate: Sat Mar 30 03:31:03 2024
+  timeStart: Sat Mar 30 03:31:40 2024
+  timeFinish: Sat Mar 30 03:36:01 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
