--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11266,3 +11266,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-36
+  taskId: 60150961
+  timeCreate: Sat Mar 30 22:23:48 2024
+  timeStart: Sat Mar 30 22:24:40 2024
+  timeFinish: Sat Mar 30 22:33:04 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-80
+  taskId: 60151020
+  timeCreate: Sat Mar 30 22:39:24 2024
+  timeStart: Sat Mar 30 22:40:03 2024
+  timeFinish: Sat Mar 30 22:43:45 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
