chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11284,6 +11284,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-40
+  taskId: 60157125
+  timeCreate: Sun Mar 31 21:29:05 2024
+  timeStart: Sun Mar 31 21:29:10 2024
+  timeFinish: Mon Apr 1 01:51:26 2024
+  timeWait: 0 mins
+  timeBuild: 262 mins
+  timeTotal: 262 mins
 - name: devspaces-devfileregistry-rhel8
   tag: 3.13-37
   taskId: 60157874
@@ -11302,3 +11311,12 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-82
+  taskId: 60159804
+  timeCreate: Mon Apr 1 01:58:25 2024
+  timeStart: Mon Apr 1 01:59:03 2024
+  timeFinish: Mon Apr 1 02:03:34 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
