chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11320,3 +11320,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-42
+  taskId: 60167308
+  timeCreate: Mon Apr 1 13:45:13 2024
+  timeStart: Mon Apr 1 13:45:47 2024
+  timeFinish: Mon Apr 1 18:01:53 2024
+  timeWait: 0 mins
+  timeBuild: 256 mins
+  timeTotal: 256 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-83
+  taskId: 60169634
+  timeCreate: Mon Apr 1 18:09:00 2024
+  timeStart: Mon Apr 1 18:09:52 2024
+  timeFinish: Mon Apr 1 18:14:28 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
