--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11455,3 +11455,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.13-19
+  taskId: 60251763
+  timeCreate: Thu Apr 4 04:03:44 2024
+  timeStart: Thu Apr 4 04:04:10 2024
+  timeFinish: Thu Apr 4 04:27:55 2024
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 24 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-90
+  taskId: 60252099
+  timeCreate: Thu Apr 4 04:27:15 2024
+  timeStart: Thu Apr 4 04:27:23 2024
+  timeFinish: Thu Apr 4 04:31:00 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
