--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -1,15 +1,8 @@
 {
   "Purpose": "To set configurations of jenkins jobs including upstream branches, dependencies and disabled status",
-  "Version": "3.13",
+  "Version": "3.14",
   "Jobs": {
     "code": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -19,7 +12,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -33,13 +33,6 @@
       }
     },
     "configbump": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -49,7 +42,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -63,13 +63,6 @@
       }
     },
     "dashboard": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -79,7 +72,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -93,13 +93,6 @@
       }
     },
     "imagepuller": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -109,7 +102,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -123,13 +123,6 @@
       }
     },
     "machineexec": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -139,7 +132,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -153,13 +153,6 @@
       }
     },
     "operator": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -169,7 +162,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -183,13 +183,6 @@
       }
     },
     "server": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -199,7 +192,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -213,13 +213,6 @@
       }
     },
     "devfileregistry": {
-      "3.11": {
-        "upstream_branch": [
-          "devspaces-3.11-rhel-8",
-          "devspaces-3.11-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
@@ -231,6 +224,13 @@
         "upstream_branch": [
           "devspaces-3.13-rhel-8",
           "devspaces-3.13-rhel-8"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "devspaces-3.14-rhel-8",
+          "devspaces-3.14-rhel-8"
         ],
         "disabled": false
       },
@@ -243,13 +243,6 @@
       }
     },
     "pluginregistry": {
-      "3.11": {
-        "upstream_branch": [
-          "devspaces-3.11-rhel-8",
-          "devspaces-3.11-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
@@ -264,6 +257,13 @@
         ],
         "disabled": false
       },
+      "3.14": {
+        "upstream_branch": [
+          "devspaces-3.14-rhel-8",
+          "devspaces-3.14-rhel-8"
+        ],
+        "disabled": false
+      },
       "3.x": {
         "upstream_branch": [
           "devspaces-3-rhel-8",
@@ -273,13 +273,6 @@
       }
     },
     "idea": {
-      "3.11": {
-        "upstream_branch": [
-          "20221111",
-          "20221111"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "20221111",
@@ -288,6 +281,13 @@
         "disabled": true
       },
       "3.13": {
+        "upstream_branch": [
+          "20221111",
+          "20221111"
+        ],
+        "disabled": false
+      },
+      "3.14": {
         "upstream_branch": [
           "20221111",
           "20221111"
@@ -303,13 +303,6 @@
       }
     },
     "traefik": {
-      "3.11": {
-        "upstream_branch": [
-          "v2.9.10",
-          "v2.9.10"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "v2.9.10",
@@ -318,6 +311,13 @@
         "disabled": true
       },
       "3.13": {
+        "upstream_branch": [
+          "v2.10.0",
+          "v2.10.0"
+        ],
+        "disabled": false
+      },
+      "3.14": {
         "upstream_branch": [
           "v2.10.0",
           "v2.10.0"
@@ -333,13 +333,13 @@
       }
     },
     "build-all-images": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -347,13 +347,6 @@
       }
     },
     "udi": {
-      "3.11": {
-        "upstream_branch": [
-          "devspaces-3.11-rhel-8",
-          "devspaces-3.11-rhel-8"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "devspaces-3.12-rhel-8",
@@ -368,6 +361,13 @@
         ],
         "disabled": false
       },
+      "3.14": {
+        "upstream_branch": [
+          "devspaces-3.14-rhel-8",
+          "devspaces-3.14-rhel-8"
+        ],
+        "disabled": false
+      },
       "3.x": {
         "upstream_branch": [
           "devspaces-3-rhel-8",
@@ -379,13 +379,6 @@
   },
   "Management-Jobs": {
     "dsc": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -395,7 +388,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -409,13 +409,6 @@
       }
     },
     "operator-bundle": {
-      "3.11": {
-        "upstream_branch": [
-          "7.80.x",
-          "main"
-        ],
-        "disabled": true
-      },
       "3.12": {
         "upstream_branch": [
           "7.82.x",
@@ -425,7 +418,14 @@
       },
       "3.13": {
         "upstream_branch": [
-          "main",
+          "7.84.x",
+          "main"
+        ],
+        "disabled": false
+      },
+      "3.14": {
+        "upstream_branch": [
+          "7.86.x",
           "main"
         ],
         "disabled": false
@@ -439,13 +439,13 @@
       }
     },
     "get-sources-rhpkg-container-build": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -453,13 +453,13 @@
       }
     },
     "push-latest-container-to-quay": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -467,13 +467,13 @@
       }
     },
     "sync-to-downstream": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -481,13 +481,13 @@
       }
     },
     "update-digests": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -495,13 +495,13 @@
       }
     },
     "send-email-qe-build-list": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -509,13 +509,13 @@
       }
     },
     "slack-notification": {
-      "3.11": {
-        "disabled": true
-      },
       "3.12": {
         "disabled": true
       },
       "3.13": {
+        "disabled": false
+      },
+      "3.14": {
         "disabled": false
       },
       "3.x": {
@@ -525,10 +525,6 @@
   },
   "CSVs": {
     "operator-bundle": {
-      "3.11": {
-        "CSV_VERSION": "3.11.0",
-        "CSV_VERSION_PREV": "3.10.1"
-      },
       "3.12": {
         "CSV_VERSION": "3.12.0",
         "CSV_VERSION_PREV": "3.11.0"
@@ -537,91 +533,90 @@
         "CSV_VERSION": "3.13.0",
         "CSV_VERSION_PREV": "3.12.0"
       },
+      "3.14": {
+        "CSV_VERSION": "3.14.0",
+        "CSV_VERSION_PREV": "3.12.0"
+      },
       "3.x": {
-        "CSV_VERSION": "3.13.0",
+        "CSV_VERSION": "3.14.0",
         "CSV_VERSION_PREV": "3.12.0"
       }
     }
   },
   "Other": {
     "Errata": {
-      "3.11": "125090",
       "3.12": "127262",
       "3.13": "129116",
+      "3.14": "n/a",
       "3.x": "n/a"
     },
     "Epic": {
-      "3.11": "CRW-5389",
       "3.12": "CRW-5680",
       "3.13": "CRW-6008",
+      "3.14": "n/a",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.11": "3.11",
-      "3.12": "latest",
-      "3.13": "next",
+      "3.12": "3.12",
+      "3.13": "latest",
+      "3.14": "next",
       "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
-      "3.11": "v0.13.0",
       "3.12": "v0.13.0",
       "3.13": "v0.13.0",
+      "3.14": "v0.13.0",
       "3.x": "v0.13.0"
     },
     "DEV_HEADER_REWRITE_TRAEFIK_PLUGIN": {
-      "3.11": "v0.1.2",
       "3.12": "v0.1.2",
       "3.13": "v0.1.2",
+      "3.14": "v0.1.2",
       "3.x": "v0.1.2"
     },
     "gopls": {
-      "3.11": "gopls/v0.10.1",
       "3.12": "gopls/v0.10.1",
       "3.13": "gopls/v0.10.1",
+      "3.14": "gopls/v0.10.1",
       "3.x": "gopls/v0.10.1"
     },
     "xdebug": {
-      "3.11": "3.1.6",
       "3.12": "3.1.6",
       "3.13": "3.1.6",
+      "3.14": "3.1.6",
       "3.x": "3.1.6"
     },
     "kubedock": {
-      "3.11": "0.11.0",
       "3.12": "0.11.0",
       "3.13": "0.11.0",
+      "3.14": "0.11.0",
       "3.x": "0.11.0"
     },
     "stow": {
-      "3.11": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.12": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.13": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
+      "3.14": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
       "3.x": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85"
     },
     "DEV_WORKSPACE_OPERATOR_TAG": {
-      "3.11": "0.25",
       "3.12": "0.26",
       "3.13": "0.27",
-      "3.x": "0.27"
+      "3.14": "0.28",
+      "3.x": "0.28"
     },
     "CHE_OPENVSX_TAG": {
-      "3.11": "che-openvsx-v0.14.2",
       "3.12": "che-openvsx-v0.14.2",
       "3.13": "che-openvsx-v0.14.5",
+      "3.14": "che-openvsx-v0.14.5",
       "3.x": "che-openvsx-v0.14.5"
     },
     "@eclipse-che/plugin-registry-generator": {
-      "3.11": "7.80.0",
       "3.12": "7.82.0",
-      "3.13": "next",
+      "3.13": "7.84.0",
+      "3.14": "next",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
-      "3.11": [
-        "v4.14",
-        "v4.13",
-        "v4.12"
-      ],
       "3.12": [
         "v4.15",
         "v4.14",
@@ -629,6 +624,12 @@
         "v4.12"
       ],
       "3.13": [
+        "v4.15",
+        "v4.14",
+        "v4.13",
+        "v4.12"
+      ],
+      "3.14": [
         "v4.15",
         "v4.14",
         "v4.13",
@@ -642,33 +643,33 @@
       ]
     },
     "OPENSHIFT_CONTENT_SET_VERSION": {
-      "3.11": "4.12",
       "3.12": "4.12",
       "3.13": "4.12",
+      "3.14": "4.12",
       "3.x": "4.12"
     },
     "OCP_TOOLS_CONTENT_SET_VERSION": {
-      "3.11": "4.12",
       "3.12": "4.12",
       "3.13": "4.12",
+      "3.14": "4.12",
       "3.x": "4.12"
     },
     "GOLANG_VERSION": {
-      "3.11": "1.16.2",
       "3.12": "1.16.2",
       "3.13": "1.16.2",
+      "3.14": "1.16.2",
       "3.x": "1.16.2"
     },
     "NODE_VERSION": {
-      "3.11": "18.16.1",
       "3.12": "18.16.1",
       "3.13": "18.16.1",
+      "3.14": "18.16.1",
       "3.x": "18.16.1"
     },
     "YARN_VERSION": {
-      "3.11": "1.22.19",
       "3.12": "1.22.19",
       "3.13": "1.22.19",
+      "3.14": "1.22.19",
       "3.x": "1.22.19"
     }
   },
