--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11689,3 +11689,21 @@
   timeWait: 3 mins
   timeBuild: 5 mins
   timeTotal: 9 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-44
+  taskId: 60276704
+  timeCreate: Thu Apr 4 18:42:31 2024
+  timeStart: Thu Apr 4 18:52:03 2024
+  timeFinish: Thu Apr 4 19:01:52 2024
+  timeWait: 9 mins
+  timeBuild: 9 mins
+  timeTotal: 19 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-98
+  taskId: 60277631
+  timeCreate: Thu Apr 4 19:15:47 2024
+  timeStart: Thu Apr 4 19:16:14 2024
+  timeFinish: Thu Apr 4 19:21:10 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
