chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11707,3 +11707,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-46
+  taskId: 60285936
+  timeCreate: Fri Apr 5 07:09:47 2024
+  timeStart: Fri Apr 5 07:10:39 2024
+  timeFinish: Fri Apr 5 11:50:42 2024
+  timeWait: 0 mins
+  timeBuild: 280 mins
+  timeTotal: 280 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-99
+  taskId: 60291967
+  timeCreate: Fri Apr 5 12:00:06 2024
+  timeStart: Fri Apr 5 12:00:12 2024
+  timeFinish: Fri Apr 5 12:04:08 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
