--- a/.github/workflows/update-vsix-versions.yaml
+++ b/.github/workflows/update-vsix-versions.yaml
@@ -14,7 +14,7 @@ on:
     - cron: '0 0 1 * *' # Run at midnight (00:00) on the 1st day of every month
 
 jobs:
-  check:
+  Check-new-extensions-versions:
     runs-on: ubuntu-20.04
 
     steps:
@@ -30,21 +30,14 @@ jobs:
         cd dependencies/che-plugin-registry/build/scripts
         ./update_extensions_versions.sh
 
-    - name: Install GitHub CLI
-      run: |
-        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-        sudo apt-add-repository https://cli.github.com/packages
-        sudo apt update
-        sudo apt install gh
-
-    - name: Check for changes
-      id: git_changes
-      run: |
-        changes=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
-        echo "::set-output name=changes::${changes}"
-
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v19
+      id: verify-changed-files
+      with:
+        files: dependencies/che-plugin-registry/openvsx-sync.json
+        
     - name: Create Pull Request
-      if: ${{ steps.git_changes.outputs.changes != '' }}
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
         # Set up git configuration
         export GITHUB_TOKEN=${{ secrets.CRW_BUILD_TOKEN }}
@@ -56,7 +49,7 @@ jobs:
 
         # Add and commit changes
         git add .
-        git commit -m "Auto-generated changes"
+        git commit -m "Auto-generated changes; update vsix extensions versions"
 
         # Push changes to the remote repository
         git push origin new-extension-version-branch
