chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11725,3 +11725,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-47
+  taskId: 60370851
+  timeCreate: Tue Apr 9 17:17:16 2024
+  timeStart: Tue Apr 9 17:17:33 2024
+  timeFinish: Tue Apr 9 21:47:05 2024
+  timeWait: 0 mins
+  timeBuild: 269 mins
+  timeTotal: 269 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-100
+  taskId: 60381913
+  timeCreate: Tue Apr 9 21:56:24 2024
+  timeStart: Tue Apr 9 21:57:18 2024
+  timeFinish: Tue Apr 9 22:01:51 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
